# psxlivenew

./: .gitignore  1.0.1  README.md  advanced_forecasting.py  app.py  app_backup.py  clean_data_fetcher.py  comprehensive_brand_predictor.py  comprehensive_intraday.py  data_fetcher.py  disable_yfinance.py  enhanced_features.py  enhanced_live_dashboard.py  enhanced_psx_fetcher.py  fetch_prices.py  file_debug.py  forecasting.py  intraday_scheduler.py  live_kse40_dashboard.py  news_predictor.py  packages.txt  psx_data_info.md  pyproject.toml  requirements.txt  requirements_clean.txt  requirements_streamlit.txt  requirements_streamlit_cloud.txt  sample_xausd_data.csv  simple_cache.py  simple_file_reader.py  streamlit_app.py  test_upload.py  test_xausd.csv  test_xausd_upload.py  universal_predictor.py  universal_predictor_new.py  utils.py  visualization.py
attached_assets/: Pasted-Project-Idea-Forecasting-PSX-KSE-100-Index-with-Live-Data-Goal-Build-a-complete-project-that-for-1751184617658_1751184617662.txt  Pasted-Project-Idea-Forecasting-PSX-KSE-100-Index-with-Live-Data-Goal-Build-a-complete-project-that-for-1751221376035_1751221376041.txt  XAU_USD Historical Data (1)_1752138885485.csv  content-1751431616883.md
