[project]
name = "psx-forecasting"
version = "0.1.0"
description = "PSX KSE-100 Forecasting Dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "prophet>=1.1.5",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.10.0",
    "pytz>=2024.1",
    "holidays>=0.50",
    "yfinance>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
