[project]
name = "psx-forecasting"
version = "0.1.0"
description = "PSX KSE-100 Forecasting Dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.47.0",
    "pandas==2.3.1",
    "numpy==2.3.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "plotly==6.2.0",
    "requests==2.32.4",
    "yfinance==0.2.64",
    "pytz==2025.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
