[project]
name = "psx-forecasting"
version = "0.1.0"
description = "PSX KSE-100 Forecasting Dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.51.0",
    "pandas==2.3.3",
    "numpy==2.3.5",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "plotly==6.5.0",
    "requests==2.32.5",
    "yfinance==0.2.66",
    "pytz==2025.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
